wpf のレイアウト崩れ解消、exe のビルド追加

--- a/BlazorHybrid.Wpf/BlazorHybrid.Wpf.csproj
+++ b/BlazorHybrid.Wpf/BlazorHybrid.Wpf.csproj
@@ -8,6 +8,7 @@
     <UseWPF>true</UseWPF>
 
     <RootNamespace>BlazorHybrid.Wpf</RootNamespace>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
